Fixed text overflow issues

--- a/src/components/PostCard/PostBody/PostBody.scss
+++ b/src/components/PostCard/PostBody/PostBody.scss
@@ -92,6 +92,8 @@
 
 .eventBodyColumn {
   display: flex;
+  text-overflow: ellipsis;
+  overflow: hidden;
   flex-direction: column;
 }
 
