--- a/src/components/PostCard/PostHeader/PostHeader.scss
+++ b/src/components/PostCard/PostHeader/PostHeader.scss
@@ -189,6 +189,8 @@
 
   .headerText {
     max-width: calc(100% - 160px);
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .userTitle {
