--- a/src/components/PostLabel/PostLabel.scss
+++ b/src/components/PostLabel/PostLabel.scss
@@ -64,4 +64,12 @@
   .label {
     min-width: auto;
   }
+
+  .completed {
+    width: 40px;
+    height: 25px;
+    top: -3px;
+    line-height: 20px;
+    overflow: hidden;
+  }
 }
